# Autonomous-AI-Data-Analyst-Platform

./: .env  main.py  pyproject.toml  requirements.txt  test.py
app/agents/: ingestion_agent.py  schema_agent.py
app/database/: snowflake_conn.py
app/frontend/: streamlit_app.py
app/llm/: gemini_client.py
