[project]
name = "autonomous-ai-data-analyst-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=7.4.3",
    "fastapi>=0.136.1",
    "google-genai>=2.1.0",
    "joblib>=1.5.3",
    "langchain>=1.2.18",
    "langgraph>=1.1.10",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "prophet>=1.3.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "snowflake-connector-python>=4.4.0",
    "snowflake-sqlalchemy>=1.9.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
